# wasp-companion

./: .gitignore  .gitmodules  README.md  com.arteeh.Companion.appdata.xml  com.arteeh.Companion.desktop  com.arteeh.Companion.json  com.arteeh.Companion.metainfo.xml  com.arteeh.Companion.yml  flatpak.sh  meson.build
data/: com.arteeh.Companion.appdata.xml.in  com.arteeh.Companion.desktop.in  com.arteeh.Companion.gschema.xml  meson.build
flatpak/: com.arteeh.Companion.desktop  com.arteeh.Companion.yml  flatpak  flatpak.sh  modules.json  python.json  python.txt  requirements.txt
po/: POTFILES  meson.build
src/: Makefile  app.py  app.ui  main.py  meson.build  rtc.py  run.sh  wasp-companion.in  wasp_companion.gresource.xml  window.py  window.ui
src/ota-dfu/: ble_legacy_dfu_controller.py  ble_secure_dfu_controller.py  dfu.py  gen_dat.c  scan.py  util.py  wizard.py
src/pynus/: pynus.py
